--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^8.3.12",
+    "@mantine/form": "^8.3.12",
     "@mantine/hooks": "^8.3.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
